--- a/examples/sharded_kv/pos_traces.cfg
+++ b/examples/sharded_kv/pos_traces.cfg
@@ -1,6 +1,6 @@
 SPECIFICATION Spec
 INVARIANT CandSep
 CONSTANTS
-Key = { k1 , k2 } 
-Value = { v1 , v2 } 
-Node = { n1 , n2 } 
+Key = { k1 , k2, k3 } 
+Value = { v1 , v2, v3 } 
+Node = { n1 , n2, n3, n4 } 
