--- a/examples/client_server_db_ae/cust_decomp2/pos_traces.cfg
+++ b/examples/client_server_db_ae/cust_decomp2/pos_traces.cfg
@@ -2,6 +2,6 @@ SPECIFICATION Spec
 INVARIANT CandSep
 CONSTANTS
 Node = { n1 , n2 } 
-Request = { req1 , req2 } 
+Request = { req1 , req2 , req3 } 
 Response = { resp1 , resp2 } 
 DbRequestId = { id1 , id2 } 
